Fix errors from refactor of list media folders to single one